...
    var body: some View {
        Form {
            Section {
                TextField(text: $task.name) {
                    Text("Name")
                }
                .accessibilityLabel("Task Name")
                Picker("Target", selection: $task.target) {
                    Text("My Mac")
                        .tag("My Mac")

                    Text("SSH")
                        .tag("SSH")
...
            }

            Section {
                TextField(text: $task.command) {
                    Text("Task")
                }
                .accessibilityLabel("Task Command")
                TextField(text: $task.workingDirectory) {
                    Text("Working Directory")
                }
            }

            Section {
...
