...
                                editorManager.activeEditor = editorManager.activeEditorHistory.removeFirst()()!
                            }
                        }
                        editorManager.flatten()
                    }
                )
                .help("Close this Editor")
                .disabled(editorManager.isFocusingActiveEditor)
                .opacity(editorManager.isFocusingActiveEditor ? 0.5 : 1)

                TabBarAccessoryIcon(
                    icon: .init(
                        systemName: editorManager.isFocusingActiveEditor
...
                        }
                        editorManager.isFocusingActiveEditor.toggle()
                    }
                )
                .help(
                    editorManager.isFocusingActiveEditor
                      ? "Unfocus this Editor"
                      : "Focus this Editor"
                )

                Divider()
                    .frame(height: 10)
                    .padding(.horizontal, 4)
            }
...
            case (.horizontal, true), (.vertical, false):
                Button {
                    split(edge: .bottom)
                } label: {
                    Image(systemName: "square.split.1x2")
                }
                .help("Split Vertically")

            case (.vertical, true), (.horizontal, false):
                Button {
                    split(edge: .trailing)
                } label: {
                    Image(systemName: "square.split.2x1")
                }
                .help("Split Horizontally")

            default:
                EmptyView()
            }
        }
        .buttonStyle(.icon)
...
