...
                    .transformEnvironment(\.edgeInsets) { insets in
                        insets.top += TabBarView.height + PathBarView.height + 1 + 1
                    }
            } else {
                VStack {
                    Spacer()
                    Text("No Editor")
                        .font(.system(size: 17))
                        .foregroundColor(.secondary)
                        .frame(minHeight: 0)
                        .clipped()
                    Spacer()
                }
...
